develop/source-code/tools/expressions/src/com/zte/exp/mos/Mos_expParser.java
// Generated from /home/olinchy/workspace/ems-mos/develop/source-code/tools/expressions/src/com/zte/exp/mos/Mos_exp.g4 by ANTLR 4.5.1
package com.zte.exp.mos;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Mos_expParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, SLASH=13, LIKE=14, MINUS=15, ADD=16, DIVID=17, 
		MULTI=18, BAR=19, AMPERSAND=20, RIGHT=21, LEFT=22, HEX=23, STRING=24, 
		INT=25, NOTEQUAL=26, CONTAINS=27, IN=28, NOT=29, OR=30, AND=31, SMALLER=32, 
		BIGGER=33, EQUAL=34, SMALLEROREQUAL=35, BIGGEROREQUAL=36, TEXT=37, WS=38;
	public static final int
		RULE_init = 0, RULE_dbexp = 1, RULE_dnexp = 2, RULE_dnsec = 3, RULE_dnterm = 4, 
		RULE_dnele = 5, RULE_element = 6, RULE_neid = 7, RULE_wildcard = 8, RULE_index = 9, 
		RULE_comparasion = 10, RULE_array = 11, RULE_arrayexp = 12, RULE_boolean_expr = 13, 
		RULE_boolean_term = 14, RULE_boolean_element = 15, RULE_extendedExp = 16, 
		RULE_calculateExp = 17, RULE_calcAddEle = 18, RULE_calcMultiEle = 19, 
		RULE_calcTerm = 20, RULE_localexp = 21, RULE_moexp = 22, RULE_propertyName = 23, 
		RULE_className = 24, RULE_value = 25, RULE_dbString = 26, RULE_pureString = 27, 
		RULE_intValue = 28, RULE_hexValue = 29, RULE_octValue = 30, RULE_name = 31;
	public static final String[] ruleNames = {
		"init", "dbexp", "dnexp", "dnsec", "dnterm", "dnele", "element", "neid", 
		"wildcard", "index", "comparasion", "array", "arrayexp", "boolean_expr", 
		"boolean_term", "boolean_element", "extendedExp", "calculateExp", "calcAddEle", 
		"calcMultiEle", "calcTerm", "localexp", "moexp", "propertyName", "className", 
		"value", "dbString", "pureString", "intValue", "hexValue", "octValue", 
		"name"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'mw.nr'", "'mw.nr8000tr='", "'['", "']'", "','", 
		"'true'", "'false'", "'${'", "'}'", "'.'", "'/'", null, "'-'", "'+'", 
		"'div'", "'*'", "'|'", "'&'", "'>>'", "'<<'", null, null, null, "'!='", 
		"'contains'", null, null, null, null, "'<'", "'>'", "'='", "'<='", "'>='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "SLASH", "LIKE", "MINUS", "ADD", "DIVID", "MULTI", "BAR", "AMPERSAND", 
		"RIGHT", "LEFT", "HEX", "STRING", "INT", "NOTEQUAL", "CONTAINS", "IN", 
		"NOT", "OR", "AND", "SMALLER", "BIGGER", "EQUAL", "SMALLEROREQUAL", "BIGGEROREQUAL", 
		"TEXT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Mos_exp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Mos_expParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public Boolean_exprContext boolean_expr() {
			return getRuleContext(Boolean_exprContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitInit(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			setState(69);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				match(T__0);
				setState(65);
				boolean_expr();
				setState(66);
				match(T__1);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				boolean_expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DbexpContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public DbexpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dbexp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterDbexp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitDbexp(this);
		}
	}

	public final DbexpContext dbexp() throws RecognitionException {
		DbexpContext _localctx = new DbexpContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dbexp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DnexpContext extends ParserRuleContext {
		public DnsecContext dnsec() {
			return getRuleContext(DnsecContext.class,0);
		}
		public DnexpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dnexp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterDnexp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitDnexp(this);
		}
	}

	public final DnexpContext dnexp() throws RecognitionException {
		DnexpContext _localctx = new DnexpContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dnexp);
		try {
			setState(78);
			switch (_input.LA(1)) {
			case T__9:
			case SLASH:
			case TEXT:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				dnsec();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				match(T__0);
				setState(75);
				dnsec();
				setState(76);
				match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DnsecContext extends ParserRuleContext {
		public DnsecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dnsec; }
	 
		public DnsecContext() { }
		public void copyFrom(DnsecContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OneDNTermContext extends DnsecContext {
		public DntermContext dnterm() {
			return getRuleContext(DntermContext.class,0);
		}
		public OneDNTermContext(DnsecContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterOneDNTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitOneDNTerm(this);
		}
	}
	public static class TwoDNTermContext extends DnsecContext {
		public List<DntermContext> dnterm() {
			return getRuleContexts(DntermContext.class);
		}
		public DntermContext dnterm(int i) {
			return getRuleContext(DntermContext.class,i);
		}
		public TwoDNTermContext(DnsecContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterTwoDNTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitTwoDNTerm(this);
		}
	}

	public final DnsecContext dnsec() throws RecognitionException {
		DnsecContext _localctx = new DnsecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dnsec);
		try {
			setState(84);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new OneDNTermContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				dnterm();
				}
				break;
			case 2:
				_localctx = new TwoDNTermContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				dnterm();
				setState(82);
				dnterm();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DntermContext extends ParserRuleContext {
		public MoexpContext moexp() {
			return getRuleContext(MoexpContext.class,0);
		}
		public LocalexpContext localexp() {
			return getRuleContext(LocalexpContext.class,0);
		}
		public DneleContext dnele() {
			return getRuleContext(DneleContext.class,0);
		}
		public DntermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dnterm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterDnterm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitDnterm(this);
		}
	}

	public final DntermContext dnterm() throws RecognitionException {
		DntermContext _localctx = new DntermContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dnterm);
		try {
			setState(89);
			switch (_input.LA(1)) {
			case TEXT:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				moexp();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				localexp();
				}
				break;
			case SLASH:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				dnele();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DneleContext extends ParserRuleContext {
		public DneleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dnele; }
	 
		public DneleContext() { }
		public void copyFrom(DneleContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DnElementsContext extends DneleContext {
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public DnElementsContext(DneleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterDnElements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitDnElements(this);
		}
	}
	public static class RootDNContext extends DneleContext {
		public TerminalNode SLASH() { return getToken(Mos_expParser.SLASH, 0); }
		public RootDNContext(DneleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterRootDN(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitRootDN(this);
		}
	}
	public static class WildDNContext extends DneleContext {
		public TerminalNode SLASH() { return getToken(Mos_expParser.SLASH, 0); }
		public WildcardContext wildcard() {
			return getRuleContext(WildcardContext.class,0);
		}
		public WildDNContext(DneleContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterWildDN(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitWildDN(this);
		}
	}

	public final DneleContext dnele() throws RecognitionException {
		DneleContext _localctx = new DneleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dnele);
		try {
			int _alt;
			setState(101);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new DnElementsContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(94); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(91);
						element();
						setState(92);
						element();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(96); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case 2:
				_localctx = new RootDNContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				match(SLASH);
				}
				break;
			case 3:
				_localctx = new WildDNContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				match(SLASH);
				setState(100);
				wildcard();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
	 
		public ElementContext() { }
		public void copyFrom(ElementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SlashExpContext extends ElementContext {
		public TerminalNode SLASH() { return getToken(Mos_expParser.SLASH, 0); }
		public MoexpContext moexp() {
			return getRuleContext(MoexpContext.class,0);
		}
		public LocalexpContext localexp() {
			return getRuleContext(LocalexpContext.class,0);
		}
		public SlashExpContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterSlashExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitSlashExp(this);
		}
	}
	public static class SlashValueContext extends ElementContext {
		public TerminalNode SLASH() { return getToken(Mos_expParser.SLASH, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public IndexContext index() {
			return getRuleContext(IndexContext.class,0);
		}
		public DbStringContext dbString() {
			return getRuleContext(DbStringContext.class,0);
		}
		public NeidContext neid() {
			return getRuleContext(NeidContext.class,0);
		}
		public WildcardContext wildcard() {
			return getRuleContext(WildcardContext.class,0);
		}
		public SlashValueContext(ElementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterSlashValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitSlashValue(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_element);
		try {
			setState(116);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new SlashExpContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				match(SLASH);
				setState(106);
				switch (_input.LA(1)) {
				case TEXT:
					{
					setState(104);
					moexp();
					}
					break;
				case T__9:
					{
					setState(105);
					localexp();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case 2:
				_localctx = new SlashValueContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				match(SLASH);
				setState(114);
				switch (_input.LA(1)) {
				case TEXT:
					{
					setState(109);
					name();
					}
					break;
				case INT:
					{
					setState(110);
					index();
					}
					break;
				case STRING:
					{
					setState(111);
					dbString();
					}
					break;
				case T__2:
				case T__3:
					{
					setState(112);
					neid();
					}
					break;
				case MULTI:
					{
					setState(113);
					wildcard();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NeidContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(Mos_expParser.INT, 0); }
		public IndexContext index() {
			return getRuleContext(IndexContext.class,0);
		}
		public NeidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_neid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterNeid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitNeid(this);
		}
	}

	public final NeidContext neid() throws RecognitionException {
		NeidContext _localctx = new NeidContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_neid);
		try {
			setState(124);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				match(T__2);
				setState(119);
				match(INT);
				setState(120);
				match(EQUAL);
				setState(121);
				index();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				match(T__3);
				setState(123);
				index();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WildcardContext extends ParserRuleContext {
		public WildcardContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wildcard; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterWildcard(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitWildcard(this);
		}
	}

	public final WildcardContext wildcard() throws RecognitionException {
		WildcardContext _localctx = new WildcardContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_wildcard);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(MULTI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IndexContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(Mos_expParser.INT, 0); }
		public IndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterIndex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitIndex(this);
		}
	}

	public final IndexContext index() throws RecognitionException {
		IndexContext _localctx = new IndexContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_index);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparasionContext extends ParserRuleContext {
		public ComparasionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparasion; }
	 
		public ComparasionContext() { }
		public void copyFrom(ComparasionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EqualContext extends ComparasionContext {
		public List<ExtendedExpContext> extendedExp() {
			return getRuleContexts(ExtendedExpContext.class);
		}
		public ExtendedExpContext extendedExp(int i) {
			return getRuleContext(ExtendedExpContext.class,i);
		}
		public TerminalNode EQUAL() { return getToken(Mos_expParser.EQUAL, 0); }
		public EqualContext(ComparasionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterEqual(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitEqual(this);
		}
	}
	public static class SmallerContext extends ComparasionContext {
		public List<ExtendedExpContext> extendedExp() {
			return getRuleContexts(ExtendedExpContext.class);
		}
		public ExtendedExpContext extendedExp(int i) {
			return getRuleContext(ExtendedExpContext.class,i);
		}
		public TerminalNode SMALLER() { return getToken(Mos_expParser.SMALLER, 0); }
		public SmallerContext(ComparasionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterSmaller(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitSmaller(this);
		}
	}
	public static class ContainsContext extends ComparasionContext {
		public List<ExtendedExpContext> extendedExp() {
			return getRuleContexts(ExtendedExpContext.class);
		}
		public ExtendedExpContext extendedExp(int i) {
			return getRuleContext(ExtendedExpContext.class,i);
		}
		public TerminalNode CONTAINS() { return getToken(Mos_expParser.CONTAINS, 0); }
		public ContainsContext(ComparasionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterContains(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitContains(this);
		}
	}
	public static class InContext extends ComparasionContext {
		public ExtendedExpContext extendedExp() {
			return getRuleContext(ExtendedExpContext.class,0);
		}
		public TerminalNode IN() { return getToken(Mos_expParser.IN, 0); }
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public InContext(ComparasionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterIn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitIn(this);
		}
	}
	public static class LikeContext extends ComparasionContext {
		public List<ExtendedExpContext> extendedExp() {
			return getRuleContexts(ExtendedExpContext.class);
		}
		public ExtendedExpContext extendedExp(int i) {
			return getRuleContext(ExtendedExpContext.class,i);
		}
		public TerminalNode LIKE() { return getToken(Mos_expParser.LIKE, 0); }
		public LikeContext(ComparasionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterLike(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitLike(this);
		}
	}
	public static class BiggerContext extends ComparasionContext {
		public List<ExtendedExpContext> extendedExp() {
			return getRuleContexts(ExtendedExpContext.class);
		}
		public ExtendedExpContext extendedExp(int i) {
			return getRuleContext(ExtendedExpContext.class,i);
		}
		public TerminalNode BIGGER() { return getToken(Mos_expParser.BIGGER, 0); }
		public BiggerContext(ComparasionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterBigger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitBigger(this);
		}
	}
	public static class NotEqualContext extends ComparasionContext {
		public List<ExtendedExpContext> extendedExp() {
			return getRuleContexts(ExtendedExpContext.class);
		}
		public ExtendedExpContext extendedExp(int i) {
			return getRuleContext(ExtendedExpContext.class,i);
		}
		public TerminalNode NOTEQUAL() { return getToken(Mos_expParser.NOTEQUAL, 0); }
		public NotEqualContext(ComparasionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterNotEqual(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).exitNotEqual(this);
		}
	}
	public static class SOrEContext extends ComparasionContext {
		public List<ExtendedExpContext> extendedExp() {
			return getRuleContexts(ExtendedExpContext.class);
		}
		public ExtendedExpContext extendedExp(int i) {
			return getRuleContext(ExtendedExpContext.class,i);
		}
		public TerminalNode SMALLEROREQUAL() { return getToken(Mos_expParser.SMALLEROREQUAL, 0); }
		public SOrEContext(ComparasionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Mos_expListener ) ((Mos_expListener)listener).enterSOrE(this);
		}
		@Override
